# Lithum-v2

./: .gitignore  .gitmodules  config.py  config.py.example  crowdin.yml  dl.py  i18n.py  main.py  pyproject.toml
lib/: LithumBot.py  db.py  error.py  func.py  localization.py  views.py
src/: bump.py  settings.py  up.py  user.py
translations/: en_US.yml  ja.yml  ja_JP.yml
